--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:id="@+id/operationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#efefef"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="20dp"
-        android:background="#efefef">
+        android:padding="15dp">
+
         <ImageView
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_vertical_align_top_black_24dp" />
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
             android:src="@drawable/ic_vertical_align_bottom_black_24dp" />
 
         <ImageView
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="30dp"
             android:layout_weight="1"
-            android:src="@drawable/ic_delete_black_24dp"/>
+            android:src="@drawable/ic_delete_black_24dp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/searchLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/operationView"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="20dp"
-        android:background="#efefef">
-        <android.support.v7.widget.SearchView
-            android:id="@+id/searchView"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:queryHint="输入关键词搜索"/>
 
-    </LinearLayout>
 
     <ScrollView
         android:id="@+id/logScroll"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/searchLayout"
-        android:padding="20dp">
+        android:layout_height="0dp"
+        android:padding="20dp"
+        android:layout_weight="1">
+
         <TextView
             android:id="@+id/logContent"
             android:layout_width="match_parent"
@@ -58,5 +50,21 @@
             android:text="Hello Log!" />
     </ScrollView>
 
+    <LinearLayout
+        android:id="@+id/searchLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#efefef"
+        android:orientation="horizontal"
+        android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-</android.support.constraint.ConstraintLayout>
+        <android.support.v7.widget.SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:queryHint="输入关键词搜索" />
+
+    </LinearLayout>
+
+</LinearLayout>
